--- a/index.html
+++ b/index.html
@@ -410,11 +410,11 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project 1 -->
-                <div
-                    class="group relative rounded-xl overflow-hidden cursor-pointer fade-in-section border border-white/5">
+                <a href="https://eshaltestproject.edgeone.app" target="_blank"
+                    class="group relative block rounded-xl overflow-hidden cursor-pointer fade-in-section border border-white/5">
                     <div class="h-80 w-full relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-                            alt="Luxe Architect Website"
+                        <img src="https://images.unsplash.com/photo-1573408301185-9146fe634ad0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                            alt="Gold Jewellery Collection"
                             class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                         <div
                             class="absolute inset-0 bg-primary/40 group-hover:bg-primary/20 transition-colors duration-300">
@@ -424,19 +424,22 @@
                         class="absolute inset-0 bg-primary/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col items-center justify-center p-6 text-center backdrop-blur-sm">
                         <h4
                             class="text-2xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                            Luxe Architect</h4>
+                            Eshal Jewellery</h4>
                         <p
                             class="text-secondary text-sm translate-y-4 group-hover:translate-y-0 transition-transform duration-300 delay-75">
-                            Real Estate • Web Design</p>
+                            E-Commerce • Luxury Gold
+                            <span class="text-secondary hover:text-white transition-colors duration-300 ml-2">Visit
+                                Website</span>
+                        </p>
                     </div>
-                </div>
+                </a>
 
                 <!-- Project 2 -->
-                <div
-                    class="group relative rounded-xl overflow-hidden cursor-pointer fade-in-section delay-100 border border-white/5">
+                <a href="https://ownnutrition.lovable.app" target="_blank"
+                    class="group relative block rounded-xl overflow-hidden cursor-pointer fade-in-section delay-100 border border-white/5">
                     <div class="h-80 w-full relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-                            alt="FinTech Dashboard"
+                        <img src="https://images.unsplash.com/photo-1490645935967-10de6ba17061?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                            alt="Healthy Nutrition"
                             class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                         <div
                             class="absolute inset-0 bg-primary/40 group-hover:bg-primary/20 transition-colors duration-300">
@@ -446,19 +449,22 @@
                         class="absolute inset-0 bg-primary/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col items-center justify-center p-6 text-center backdrop-blur-sm">
                         <h4
                             class="text-2xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                            FinTech Pro</h4>
+                            Own Nutrition</h4>
                         <p
                             class="text-secondary text-sm translate-y-4 group-hover:translate-y-0 transition-transform duration-300 delay-75">
-                            Finance • Dashboard UI</p>
+                            Health & Wellness • Nutrition
+                            <span class="text-secondary hover:text-white transition-colors duration-300 ml-2">Visit
+                                Website</span>
+                        </p>
                     </div>
-                </div>
+                </a>
 
                 <!-- Project 3 -->
-                <div
-                    class="group relative rounded-xl overflow-hidden cursor-pointer fade-in-section delay-200 border border-white/5">
+                <a href="https://adaksoulrestaurant.lovable.app" target="_blank"
+                    class="group relative block rounded-xl overflow-hidden cursor-pointer fade-in-section delay-200 border border-white/5">
                     <div class="h-80 w-full relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1555421689-491a97ff2040?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-                            alt="SaaS Application"
+                        <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                            alt="Luxury Restaurant"
                             class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                         <div
                             class="absolute inset-0 bg-primary/40 group-hover:bg-primary/20 transition-colors duration-300">
@@ -468,12 +474,15 @@
                         class="absolute inset-0 bg-primary/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col items-center justify-center p-6 text-center backdrop-blur-sm">
                         <h4
                             class="text-2xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                            CloudSync</h4>
+                            Adak Soul Restaurant</h4>
                         <p
                             class="text-secondary text-sm translate-y-4 group-hover:translate-y-0 transition-transform duration-300 delay-75">
-                            SaaS • Web App</p>
+                            Hospitality • Fine Dining
+                            <span class="text-secondary hover:text-white transition-colors duration-300 ml-2">Visit
+                                Website</span>
+                        </p>
                     </div>
-                </div>
+                </a>
 
                 <!-- Project 4 -->
                 <div
@@ -696,18 +705,19 @@
                             <div class="flex items-start space-x-4">
                                 <i class="fas fa-map-marker-alt text-secondary mt-1"></i>
                                 <span class="text-sm text-gray-300">
-                                    3/78A Madavana(H), Kaippathy Jn, Kuttath Rd, Labour Jn,<br>
-                                    Eroor P.O, Thrippunithura 682306,<br>
-                                    Ernakulam, Kerala, India
+                                    Distributed Team<br>
+                                    Remote-First Operations<br>
+                                    Worldwide.
+
                                 </span>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <i class="fas fa-envelope text-secondary mt-1"></i>
-                                <span class="text-sm text-gray-300">hello@aer2connect.com</span>
+                                <span class="text-sm text-gray-300">aabelroisimon@gmail.com</span>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <i class="fas fa-phone text-secondary mt-1"></i>
-                                <span class="text-sm text-gray-300">+1 (555) 123-4567</span>
+                                <span class="text-sm text-gray-300">+91 90747 21757</span>
                             </div>
                         </div>
                     </div>
