meet our team section added

--- a/index.html
+++ b/index.html
@@ -688,6 +688,191 @@
         </div>
     </section>
 
+    <!-- Meet Our Team Section -->
+    <section id="team" class="py-24 bg-primary relative border-t border-white/5">
+        <div class="container mx-auto px-6">
+            <div class="text-center mb-16 fade-in-section">
+                <h2 class="text-secondary font-subheading text-sm uppercase tracking-widest mb-2">The Minds Behind</h2>
+                <h3 class="text-4xl font-bold text-white">Meet Our Team</h3>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+                <!-- Member 1: Founder -->
+                <!-- Aab El Roi -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!-- Placeholder Image for Founder -->
+                        <img src="./assets/images/aab_el_roi.jpeg" alt="Aab El Roi"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Aab El Roi</h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Founder & Client Acquisition Lead</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="https://www.linkedin.com/in/aab-el-roi-233b5116b" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+
+                <!-- Member 2: Chief Executive Officer (CEO) -->
+                <!--Nithya Sree  -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!-- Placeholder Image -->
+                        <img src="./assets/images/nithya.jpeg" alt="Nithya Sree"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Nithya Sree</h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Chief Executive Officer (CEO)</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="https://www.linkedin.com/in/nithyasree-" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+
+                <!-- Member 3: digital presence manager -->
+                <!-- mame Lucia Maxi -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!-- Placeholder Image  -->
+                        <img src="./assets/images/maxim.jpeg" alt="mame Lucia Maxi"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Mame Lucia Maxi </h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Digital presence manager</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="https://www.linkedin.com/in/lucia-maxim-a4a1161a2/" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+                <!--Project manager  -->
+                <!-- Himanshu Jha -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!-- Placeholder Image  -->
+                        <img src="./assets/images/himanshu.jpeg" alt="Himanshu Jha 
+" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Himanshu Jha
+                    </h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Project manager</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="https://www.linkedin.com/in/himanshu-jha-52b297282/" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+                <!-- Growth & Strategic Partnership -->
+                <!-- Aditya naidu  -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!-- Placeholder Image  -->
+                        <img src="./assets/images/adithya.jpeg" alt="Aditya naidu 
+" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Aditya naidu
+                    </h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Growth & Strategic Partnerships</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="https://www.linkedin.com/in/aditya-naidu-042193317?" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+                <!-- Member 4: Tech Team  -->
+                <!-- Aswini -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!--placeholder  Image -->
+                        <img src="./assets/images/aswini.jpeg" alt="Aswini P S"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Aswini P S </h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Developer</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="https://www.linkedin.com/in/aswinips" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+                <!-- Athulya -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!-- placeholder Image -->
+                        <img src="./assets/images/athulya.jpeg" alt="Athulya Dominic"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Athulya Dominic </h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Developer</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="www.linkedin.com/in/athulyadominic" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+                <!-- Navaneeth -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!--  placeholder Image -->
+                        <img src="./assets/images/navaneeth.jpeg" alt="Navaneeth"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Navaneeth Joy </h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Developer</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="www.linkedin.com/in/navaneeth-joy-b836b1317" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+                <!--Agna  -->
+                <div
+                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
+                    <div
+                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
+                        <!-- placeholder Image -->
+                        <img src="./assets/images/agna.jpeg" alt="Aswini P S"
+                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                    </div>
+                    <h4 class="text-xl font-bold text-white mb-1">Agna Antony </h4>
+                    <p class="text-secondary text-sm font-medium mb-4">Designer / Developer</p>
+                    <div class="flex justify-center space-x-4">
+                        <a href="https://www.linkedin.com/in/agna-antony-68b367240?trk=contact-info" target="_blank"
+                            class="text-gray-400 hover:text-secondary transition-colors"><i
+                                class="fab fa-linkedin-in text-lg"></i></a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="py-24 bg-accent relative border-t border-white/5">
         <div class="container mx-auto px-6">
@@ -902,4 +1087,3 @@
 </body>
 
 </html>
-
