--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                         class="absolute inset-0 bg-primary/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col items-center justify-center p-6 text-center backdrop-blur-sm">
                         <h4
                             class="text-2xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                            Eshal Jewellery</h4>
+                            Marhaban Gold Jewellery</h4>
                         <p
                             class="text-secondary text-sm translate-y-4 group-hover:translate-y-0 transition-transform duration-300 delay-75">
                             E-Commerce • Luxury Gold
@@ -898,11 +898,11 @@
                             </div>
                             <div class="flex items-start space-x-4">
                                 <i class="fas fa-envelope text-secondary mt-1"></i>
-                                <span class="text-sm text-gray-300">aabelroisimon@gmail.com</span>
+                                <span class="text-sm text-gray-300">aer2connectagency@gmail.com</span>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <i class="fas fa-phone text-secondary mt-1"></i>
-                                <span class="text-sm text-gray-300">+91 90747 21757</span>
+                                <span class="text-sm text-gray-300">+91 9889884981</span>
                             </div>
                         </div>
                     </div>
@@ -1085,5 +1085,6 @@
         });
     </script>
 </body>
+
 
 </html>
