--- a/index.html
+++ b/index.html
@@ -485,6 +485,8 @@
                 </a>
 
                 <!-- Project 4 -->
+                <a href="https://vazenterprises.lovable.app/" target="_blank"
+                    class="group relative block rounded-xl overflow-hidden cursor-pointer fade-in-section border border-white/5">
                 <div
                     class="group relative rounded-xl overflow-hidden cursor-pointer fade-in-section border border-white/5">
                     <div class="h-80 w-full relative overflow-hidden">
@@ -499,12 +501,16 @@
                         class="absolute inset-0 bg-primary/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col items-center justify-center p-6 text-center backdrop-blur-sm">
                         <h4
                             class="text-2xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                            Structura</h4>
+                              Vaz Enterprises</h4>
                         <p
                             class="text-secondary text-sm translate-y-4 group-hover:translate-y-0 transition-transform duration-300 delay-75">
-                            Architecture • UX Design</p>
+                            Liquor Store • Premium Spirits
+                             <span class="text-secondary hover:text-white transition-colors duration-300 ml-2">Visit
+                                Website</span>
+                        </p>
                     </div>
                 </div>
+             </a>
 
                 <!-- Project 5 -->
                 <div
@@ -1088,3 +1094,4 @@
 
 
 </html>
+
