--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 <div
                     class="group relative rounded-xl overflow-hidden cursor-pointer fade-in-section border border-white/5">
                     <div class="h-80 w-full relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1522542550221-31fd19575a2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                        <img src="https://images.pexels.com/photos/325876/pexels-photo-325876.jpeg"
                             alt="Wireframing Project"
                             class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                         <div
@@ -1094,4 +1094,5 @@
 
 
 </html>
+
 
