--- a/index.html
+++ b/index.html
@@ -490,10 +490,10 @@
                 <div
                     class="group relative rounded-xl overflow-hidden cursor-pointer fade-in-section border border-white/5">
                     <div class="h-80 w-full relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1604909053196-2a44d3e2d1c5?auto=format&fit=crop&w=1350&q=80
-"
-                            alt="Wireframing Project"
-                            class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                        <img src="https://images.unsplash.com/photo-1604909053196-2a44d3e2d1c5?auto=format&fit=crop&w=1350&q=80"
+     alt="Vaz Enterprises Premium Liquor Store Colva Goa"
+     class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+
                         <div
                             class="absolute inset-0 bg-primary/40 group-hover:bg-primary/20 transition-colors duration-300">
                         </div>
@@ -1095,6 +1095,7 @@
 
 
 </html>
+
 
 
 
