--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 <div
                     class="group relative rounded-xl overflow-hidden cursor-pointer fade-in-section border border-white/5">
                     <div class="h-80 w-full relative overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1532634726-8b9fb99825b8?auto=format&fit=crop&w=1350&q=80"
+                        <img src="https://media.istockphoto.com/id/2162946448/photo/liquor-bottle-display-abstract.jpg?s=612x612&w=0&k=20&c=5oUaQnFlBTo7x7fspdB9ETZVC7aP8aZQgsXzTsnaLZo="
      alt="Vaz Enterprises Premium Liquor Store Colva Goa"
      class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
 
@@ -1095,6 +1095,7 @@
 
 
 </html>
+
 
 
 
