--- a/index.html
+++ b/index.html
@@ -990,7 +990,8 @@
                             class="fab fa-instagram text-xl"></i></a> -->
                     <!-- <a href="#" class="text-gray-400 hover:text-secondary transition-colors"><i
                             class="fab fa-twitter text-xl"></i></a> -->
-                    <a href="#" class="text-gray-400 hover:text-secondary transition-colors"><i
+                    <a target="_blank" href="https://www.linkedin.com/company/aer2connect-agency/?viewAsMember=true"
+                        class="text-gray-400 hover:text-secondary transition-colors"><i
                             class="fab fa-linkedin-in text-xl"></i></a>
                     <!-- <a href="#" class="text-gray-400 hover:text-secondary transition-colors"><i
                             class="fab fa-behance text-xl"></i></a> -->
