--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     </p>
                     <div class="grid grid-cols-2 gap-8 border-t border-white/10 pt-8">
                         <div>
-                            <h4 class="text-3xl font-bold text-white counter-animate" data-target="10" data-suffix="+">0
+                            <h4 class="text-3xl font-bold text-white counter-animate" data-target="6" data-suffix="+">0
                             </h4>
                             <p class="text-sm text-secondary mt-1">Premium Projects</p>
                         </div>
@@ -558,12 +558,12 @@
                 </div>
             </div>
 
-            <div class="text-center mt-12 fade-in-section">
+            <!-- <div class="text-center mt-12 fade-in-section">
                 <a href="#contact"
                     class="inline-block px-8 py-3 bg-transparent border border-secondary text-secondary font-semibold rounded-full hover:bg-secondary hover:text-primary transition-all duration-300">
                     View Full Portfolio
                 </a>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -646,8 +646,8 @@
                             class="w-10 h-10 bg-slate-700 rounded-full flex items-center justify-center text-white font-bold mr-3 border border-white/10">
                             JD</div>
                         <div>
-                            <h5 class="font-bold text-white text-sm">James Delaney</h5>
-                            <span class="text-xs text-gray-500">CEO, Delaney Corp</span>
+                            <h5 class="font-bold text-white text-sm">Marhaban Gold Jewellery</h5>
+                            <!-- <span class="text-xs text-gray-500">CEO</span> -->
                         </div>
                     </div>
                 </div>
@@ -666,8 +666,8 @@
                             class="w-10 h-10 bg-slate-700 rounded-full flex items-center justify-center text-white font-bold mr-3 border border-white/10">
                             SR</div>
                         <div>
-                            <h5 class="font-bold text-white text-sm">Sarah Ross</h5>
-                            <span class="text-xs text-gray-500">Founder, Glow Cosmetics</span>
+                            <h5 class="font-bold text-white text-sm"> Adak soul restaurant</h5>
+                            <!-- <span class="text-xs text-gray-500">Founder, Glow Cosmetics</span> -->
                         </div>
                     </div>
                 </div>
@@ -686,8 +686,8 @@
                             class="w-10 h-10 bg-slate-700 rounded-full flex items-center justify-center text-white font-bold mr-3 border border-white/10">
                             MK</div>
                         <div>
-                            <h5 class="font-bold text-white text-sm">Michael King</h5>
-                            <span class="text-xs text-gray-500">Director, King Estates</span>
+                            <h5 class="font-bold text-white text-sm">Vaz Enterprises</h5>
+                            <!-- <span class="text-xs text-gray-500">Director, King Estates</span> -->
                         </div>
                     </div>
                 </div>
@@ -909,13 +909,13 @@
                             </div>
                             <div class="flex items-start space-x-4">
                                 <i class="fas fa-phone text-secondary mt-1"></i>
-                                <span class="text-sm text-gray-300">+91 9889884981</span>
+                                <span class="text-sm text-gray-300">+91 98898 84981</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="mt-10 relative z-10">
-                        <a href="https://wa.me/1234567890" target="_blank"
+                        <a href="https://wa.me/919889884981" target="_blank"
                             class="inline-flex items-center space-x-2 text-white bg-[#25D366] px-4 py-2 rounded-full hover:bg-opacity-90 transition shadow-lg">
                             <i class="fab fa-whatsapp text-lg"></i>
                             <span class="font-medium text-sm">Chat on WhatsApp</span>
