--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +52,8 @@
             font-size: 1.4rem;
         }
 
-        section p, section li {
+        section p,
+        section li {
             font-size: 0.95rem;
         }
 
@@ -88,100 +90,104 @@
         }
     </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Privacy Policy</h1>
-    <p>AER2CONNECT – Landing Page & Web Solutions Agency</p>
-</header>
+    <header>
+        <h1>Privacy Policy</h1>
+        <p>AER2CONNECT – Landing Page & Web Solutions Agency</p>
+    </header>
 
-<div class="container">
+    <div class="container">
 
-    <section>
-        <h2>1. Introduction</h2>
-        <p>
-            At <strong>AER2CONNECT</strong>, we respect your privacy and are committed to protecting any information you share with us.
-            This Privacy Policy explains how we collect, use, and safeguard your data when you interact with our services or websites.
-        </p>
-    </section>
+        <section>
+            <h2>1. Introduction</h2>
+            <p>
+                At <strong>AER2CONNECT</strong>, we respect your privacy and are committed to protecting any information
+                you share with us.
+                This Privacy Policy explains how we collect, use, and safeguard your data when you interact with our
+                services or websites.
+            </p>
+        </section>
 
-    <section>
-        <h2>2. Information We Collect</h2>
-        <p>We may collect the following types of information:</p>
-        <ul>
-            <li>Basic contact details (name, email address, phone number)</li>
-            <li>Business-related information provided for landing page development</li>
-            <li>Website usage data (analytics, IP address, browser type)</li>
-        </ul>
-    </section>
+        <section>
+            <h2>2. Information We Collect</h2>
+            <p>We may collect the following types of information:</p>
+            <ul>
+                <li>Basic contact details (name, email address, phone number)</li>
+                <li>Business-related information provided for landing page development</li>
+                <li>Website usage data (analytics, IP address, browser type)</li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>3. How We Use Your Information</h2>
-        <p>Your information is used solely to:</p>
-        <ul>
-            <li>Design and deliver landing pages for clients</li>
-            <li>Communicate regarding projects, updates, or inquiries</li>
-            <li>Improve our services and website experience</li>
-        </ul>
-    </section>
+        <section>
+            <h2>3. How We Use Your Information</h2>
+            <p>Your information is used solely to:</p>
+            <ul>
+                <li>Design and deliver landing pages for clients</li>
+                <li>Communicate regarding projects, updates, or inquiries</li>
+                <li>Improve our services and website experience</li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>4. Data Sharing</h2>
-        <p>
-            AER2CONNECT does <strong>not</strong> sell, trade, or rent your personal data.
-            Information may only be shared with trusted partners when necessary to complete a project
-            or comply with legal obligations.
-        </p>
-    </section>
+        <section>
+            <h2>4. Data Sharing</h2>
+            <p>
+                AER2CONNECT does <strong>not</strong> sell, trade, or rent your personal data.
+                Information may only be shared with trusted partners when necessary to complete a project
+                or comply with legal obligations.
+            </p>
+        </section>
 
-    <section>
-        <h2>5. Cookies & Analytics</h2>
-        <p>
-            Our website may use cookies and analytics tools to understand visitor behavior and enhance performance.
-            You can disable cookies through your browser settings at any time.
-        </p>
-    </section>
+        <section>
+            <h2>5. Cookies & Analytics</h2>
+            <p>
+                Our website may use cookies and analytics tools to understand visitor behavior and enhance performance.
+                You can disable cookies through your browser settings at any time.
+            </p>
+        </section>
 
-    <section>
-        <h2>6. Data Security</h2>
-        <p>
-            We implement appropriate technical and organizational measures to protect your data
-            against unauthorized access, alteration, or disclosure.
-        </p>
-    </section>
+        <section>
+            <h2>6. Data Security</h2>
+            <p>
+                We implement appropriate technical and organizational measures to protect your data
+                against unauthorized access, alteration, or disclosure.
+            </p>
+        </section>
 
-    <section>
-        <h2>7. Third-Party Links</h2>
-        <p>
-            Our website may contain links to third-party websites.
-            We are not responsible for the privacy practices or content of those external sites.
-        </p>
-    </section>
+        <section>
+            <h2>7. Third-Party Links</h2>
+            <p>
+                Our website may contain links to third-party websites.
+                We are not responsible for the privacy practices or content of those external sites.
+            </p>
+        </section>
 
-    <section>
-        <h2>8. Changes to This Policy</h2>
-        <p>
-            This Privacy Policy may be updated periodically.
-            Any changes will be reflected on this page with an updated effective date.
-        </p>
-    </section>
+        <section>
+            <h2>8. Changes to This Policy</h2>
+            <p>
+                This Privacy Policy may be updated periodically.
+                Any changes will be reflected on this page with an updated effective date.
+            </p>
+        </section>
 
-    <section>
-        <h2>9. Contact Us</h2>
-        <p>
-            If you have any questions regarding this Privacy Policy or how we handle your data,
-            please contact us at:
-        </p>
-        <p>
-            Email: <a href="aabelroisimon@gmail.com">aabelroisimon@gmail.com</a>
-        </p>
-    </section>
+        <section>
+            <h2>9. Contact Us</h2>
+            <p>
+                If you have any questions regarding this Privacy Policy or how we handle your data,
+                please contact us at:
+            </p>
+            <p>
+                Email: <a href="aer2connectagency@gmail.com">aer2connectagency@gmail.com</a>
+            </p>
+        </section>
 
-</div>
+    </div>
 
-<footer>
-    © 2026 <span>AER2CONNECT</span>. All rights reserved.
-</footer>
+    <footer>
+        © 2026 <span>AER2CONNECT</span>. All rights reserved.
+    </footer>
 
 </body>
+
 </html>
