--- a/termsofserv.html
+++ b/termsofserv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +52,8 @@
             font-size: 1.4rem;
         }
 
-        section p, section li {
+        section p,
+        section li {
             font-size: 0.95rem;
         }
 
@@ -88,119 +90,121 @@
         }
     </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Terms of Service</h1>
-    <p>AER2CONNECT – Landing Page & Web Solutions Agency</p>
-</header>
+    <header>
+        <h1>Terms of Service</h1>
+        <p>AER2CONNECT – Landing Page & Web Solutions Agency</p>
+    </header>
 
-<div class="container">
+    <div class="container">
 
-    <section>
-        <h2>1. Acceptance of Terms</h2>
-        <p>
-            By accessing or using the services of <strong>AER2CONNECT</strong>,
-            you agree to be bound by these Terms of Service.
-            If you do not agree with any part of these terms, you should not use our services.
-        </p>
-    </section>
+        <section>
+            <h2>1. Acceptance of Terms</h2>
+            <p>
+                By accessing or using the services of <strong>AER2CONNECT</strong>,
+                you agree to be bound by these Terms of Service.
+                If you do not agree with any part of these terms, you should not use our services.
+            </p>
+        </section>
 
-    <section>
-        <h2>2. Services Provided</h2>
-        <p>
-            AER2CONNECT provides professional services including, but not limited to:
-        </p>
-        <ul>
-            <li>Landing page design and development</li>
-            <li>Website optimization and performance improvements</li>
-            <li>Client-specific web solutions</li>
-        </ul>
-    </section>
+        <section>
+            <h2>2. Services Provided</h2>
+            <p>
+                AER2CONNECT provides professional services including, but not limited to:
+            </p>
+            <ul>
+                <li>Landing page design and development</li>
+                <li>Website optimization and performance improvements</li>
+                <li>Client-specific web solutions</li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>3. Client Responsibilities</h2>
-        <p>
-            Clients agree to provide accurate information, content, and assets
-            required for the completion of projects.
-            AER2CONNECT is not responsible for delays caused by incomplete or incorrect inputs.
-        </p>
-    </section>
+        <section>
+            <h2>3. Client Responsibilities</h2>
+            <p>
+                Clients agree to provide accurate information, content, and assets
+                required for the completion of projects.
+                AER2CONNECT is not responsible for delays caused by incomplete or incorrect inputs.
+            </p>
+        </section>
 
-    <section>
-        <h2>4. Payments & Fees</h2>
-        <p>
-            All fees for services must be paid as agreed before or during project execution.
-            Failure to complete payment may result in suspension or termination of services.
-        </p>
-    </section>
+        <section>
+            <h2>4. Payments & Fees</h2>
+            <p>
+                All fees for services must be paid as agreed before or during project execution.
+                Failure to complete payment may result in suspension or termination of services.
+            </p>
+        </section>
 
-    <section>
-        <h2>5. Intellectual Property</h2>
-        <p>
-            Unless otherwise agreed in writing:
-        </p>
-        <ul>
-            <li>Clients retain ownership of their provided content</li>
-            <li>AER2CONNECT retains rights to frameworks, templates, and tools used</li>
-        </ul>
-    </section>
+        <section>
+            <h2>5. Intellectual Property</h2>
+            <p>
+                Unless otherwise agreed in writing:
+            </p>
+            <ul>
+                <li>Clients retain ownership of their provided content</li>
+                <li>AER2CONNECT retains rights to frameworks, templates, and tools used</li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>6. Revisions & Modifications</h2>
-        <p>
-            Reasonable revisions are included as per project agreement.
-            Major scope changes may require additional charges and timeline adjustments.
-        </p>
-    </section>
+        <section>
+            <h2>6. Revisions & Modifications</h2>
+            <p>
+                Reasonable revisions are included as per project agreement.
+                Major scope changes may require additional charges and timeline adjustments.
+            </p>
+        </section>
 
-    <section>
-        <h2>7. Termination</h2>
-        <p>
-            AER2CONNECT reserves the right to terminate services
-            if these terms are violated or in cases of misuse of our services.
-        </p>
-    </section>
+        <section>
+            <h2>7. Termination</h2>
+            <p>
+                AER2CONNECT reserves the right to terminate services
+                if these terms are violated or in cases of misuse of our services.
+            </p>
+        </section>
 
-    <section>
-        <h2>8. Limitation of Liability</h2>
-        <p>
-            AER2CONNECT shall not be held liable for indirect, incidental,
-            or consequential damages arising from the use of our services.
-        </p>
-    </section>
+        <section>
+            <h2>8. Limitation of Liability</h2>
+            <p>
+                AER2CONNECT shall not be held liable for indirect, incidental,
+                or consequential damages arising from the use of our services.
+            </p>
+        </section>
 
-    <section>
-        <h2>9. Governing Law</h2>
-        <p>
-            These Terms shall be governed by and interpreted
-            in accordance with the laws applicable in India.
-        </p>
-    </section>
+        <section>
+            <h2>9. Governing Law</h2>
+            <p>
+                These Terms shall be governed by and interpreted
+                in accordance with the laws applicable in India.
+            </p>
+        </section>
 
-    <section>
-        <h2>10. Changes to Terms</h2>
-        <p>
-            AER2CONNECT may update these Terms of Service at any time.
-            Continued use of our services implies acceptance of the updated terms.
-        </p>
-    </section>
+        <section>
+            <h2>10. Changes to Terms</h2>
+            <p>
+                AER2CONNECT may update these Terms of Service at any time.
+                Continued use of our services implies acceptance of the updated terms.
+            </p>
+        </section>
 
-    <section>
-        <h2>11. Contact Information</h2>
-        <p>
-            For any questions regarding these Terms of Service, contact us at:
-        </p>
-        <p>
-            Email: <a href="aabelroisimon@gmail.com">aabelroisimon@gmail.com</a>
-        </p>
-    </section>
+        <section>
+            <h2>11. Contact Information</h2>
+            <p>
+                For any questions regarding these Terms of Service, contact us at:
+            </p>
+            <p>
+                Email: <a href="aer2connectagency@gmail.com">aer2connectagency@gmail.com</a>
+            </p>
+        </section>
 
-</div>
+    </div>
 
-<footer>
-    © 2026 <span>AER2CONNECT</span>. All rights reserved.
-</footer>
+    <footer>
+        © 2026 <span>AER2CONNECT</span>. All rights reserved.
+    </footer>
 
 </body>
+
 </html>
